dist/docs/3.0.0-rc.2/community/working-group.mdx
---
title: Working Group
description: "AdCP working group: join the open community of platforms, agencies, and developers shaping the Ad Context Protocol. Collaborate on Slack and GitHub."
"og:title": "AdCP — Working Group"
---


The Ad Context Protocol Working Group is an open community of platform providers, advertisers, agencies, and developers working together to shape the future of AI-powered advertising.

## Join the Discussion

Our primary collaboration happens through Slack:

**[→ Join the AdCP Community on Slack](https://join.slack.com/t/agenticads/shared_invite/zt-3h15gj6c0-FRTrD_y4HqmeXDKBl2TDEA)**

## What We Discuss

- **Protocol Development**: Propose and discuss new features and improvements
- **Implementation Questions**: Get help implementing AdCP in your platform
- **Use Cases**: Share how you're using AdCP in real-world scenarios
- **Best Practices**: Learn from others' experiences and share your own
- **Future Direction**: Help shape the roadmap for AdCP

## How to Participate

1. **Start a Discussion**: Share ideas, ask questions, or propose changes
2. **Join Conversations**: Comment on existing discussions
3. **Share Experiences**: Tell us about your implementation journey
4. **Help Others**: Answer questions and share your expertise

## Stay Updated

- **Join Slack Channels**: Participate in topic-specific discussions
- **Follow Announcements**: Important updates are posted in the #announcements channel
- **Star the Project**: Show your support on GitHub and stay connected

## Other Ways to Connect

- **Email**: For private inquiries, reach out to hello@adcontextprotocol.org
- **GitHub Issues**: Report bugs or request features in the [issue tracker](https://github.com/adcontextprotocol/adcp/issues)

We look forward to collaborating with you!